19-istio/app/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: nginx1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
