19-istio/app/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: nginx2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
