19-istio/app/my-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: app-final-destination-rule
            subset: service1
          weight: 50
        - destination:
            host: app-final-destination-rule
            subset: service2
          weight: 50
